overlap issue in course discussions

--- a/lms/static/sass/course/_discussions-inline.scss
+++ b/lms/static/sass/course/_discussions-inline.scss
@@ -61,6 +61,7 @@
 
       &.expanded {
         padding: 20px 0;
+        z-index: 1; /*course discussion popup order*/
 
         .dogear,
         .vote-btn {
